-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: None
-
Component/s: hotspot
-
b21
We see in our nightly builds on 32bit Windows a crash in cppVtables.cpp:
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (d:/priv/openjdk/nb/NTintel/jdk/src/hotspot/share/memory/cppVtables.cpp:124), pid=583556, tid=569916
# assert((char*)p == mc_region()->top()) failed: must be
#
possibly related toJDK-8224509.
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (d:/priv/openjdk/nb/NTintel/jdk/src/hotspot/share/memory/cppVtables.cpp:124), pid=583556, tid=569916
# assert((char*)p == mc_region()->top()) failed: must be
#
possibly related to
- blocks
-
JDK-8254282 Add Linux x86_32 builds to submit workflow
-
- Resolved
-
- duplicates
-
JDK-8254606 x86_32: assert(all_ro_bytes == ro_all) failed: everything should have been counted
-
- Closed
-
- relates to
-
JDK-8224509 Incorrect alignment in CDS related allocation code on 32-bit platforms
-
- Resolved
-
-
JDK-8254606 x86_32: assert(all_ro_bytes == ro_all) failed: everything should have been counted
-
- Closed
-
(1 links to)