8254125: Assertion in cppVtables.cpp during builds on 32bit Windows